complete about page

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;800&display=swap"
       rel="stylesheet"
     />
-    <title>Ewatomi</title>
+    <title>Ewatomi Unique Beauty Place</title>
   </head>
   <body>
     <div id="root"></div>
